--- a/html/bookadmin.html
+++ b/html/bookadmin.html
@@ -18,8 +18,8 @@
     <a href="">BOOK</a>
 </nav>
     <input type="text" id="myInput" onkeyup="myFunction()" placeholder="搜索...">
-
-        <table class="responsive-table table" id="myTable" style="font-weight:bold">
+<div style="width: 100%;height: 50%;overflow: scroll;">
+        <table class="table-bordered table" id="myTable" style="font-weight:bold">
 
             <tr>
                 <th>ID</th>
@@ -28,27 +28,20 @@
                 <th>出版社</th>
                 <th>类型</th>
                 <th> 状态</th>
+                <th>借出时间</th>
                 <th>操作</th>
             </tr>
 
 
         </table>
-<div><button class="myBtn" id="addbook">添加图书</button>
+</div>
+<div>
+    <button class="myBtn" id="bookstore">我的书库</button>
+    <button class="myBtn" id="addbook">添加图书</button>
     <button class="myBtn" id="deletebook">删除图书</button>
     <button class="myBtn" ><a href="javascript:location.reload();">刷新</a></button>
 </div>
-<ul class="accordion-menu" style="padding: 0">
-    <li>
-        <div class="dropdownlink"><i class="fa fa-road" aria-hidden="true"></i> 我的书库
-            <i class="fa fa-chevron-down" aria-hidden="true"></i>
-        </div>
-        <ul class="submenuItems">
-            <li><a >图书ID:<label id="book1" ></label><button class="myBtn" id="btn1">还书</button></a></li>
-            <li><a >图书ID:<label id="book2"></label><button class="myBtn" id="btn2">还书</button></a></li>
-            <li><a >图书ID:<label id ="book3"></label><button class="myBtn" id="btn3">还书</button></a></li>
-        </ul>
-    </li>
-</ul>
+
 <div class="sy-alert sy-alert-model animated" sy-enter="zoomIn" sy-leave="zoomOut" sy-type="confirm" sy-mask="true" id="alert7">
     <div class="sy-title">图书删除</div>
     <div class="sy-content">
@@ -104,39 +97,54 @@
     <div class="sy-alert sy-alert-tips animated" sy-enter="zoomIn" sy-leave="zoomOut" sy-type="tips" sy-mask="false" id="alert6">
         <div class="sy-content">删除成功！</div>
     </div>
+<div class="sy-alert sy-alert-model animated" sy-enter="zoomIn" sy-leave="zoomOut" sy-type="confirm" sy-mask="true" id="bookalert">
+    <div class="sy-title">我的书库</div>
+    <div class="sy-content">
+        <div class="form">
+            <p class="input-item">图书ID:<input type="text" id="book1" placeholder="我的图书" readonly /><button class="myBtn" id="btn1">还书</button></p>
+            <p class="input-item">图书ID:<input type="text" id="book2" placeholder="我的图书" readonly/><button class="myBtn" id="btn2">还书</button></p>
+            <p class="input-item">图书ID:<input type="text" id ="book3" placeholder="我的图书" readonly/><button class="myBtn" id="btn3">还书</button></p>
+
+        </div>
+    </div>
+    <div class="sy-btn">
+        <button onClick="syalert.syhide('bookalert')">取消</button>
+        <button onClick="syalert.syhide('bookalert')">确定</button>
+    </div>
+</div>
 <script>
 
     var res =bookinfo.getAll();
     var record=bookinfo.queryrecord("213171645");
     for(var j=0;j<record.size();j++){
-        if($("#book1").html()==""){
-            $("#book1").html(record.elementAt(j).getBookID());
-        }else if($("#book2").html()==""){
-            $("#book2").html(record.elementAt(j).getBookID());
-        }else if($("#book3").html()==""){
-            $("#book3").html(record.elementAt(j).getBookID());
+        if($("#book1").val()==""){
+            $("#book1").val(record.elementAt(j).getBookID());
+        }else if($("#book2").val()==""){
+            $("#book2").val(record.elementAt(j).getBookID());
+        }else if($("#book3").val()==""){
+            $("#book3").val(record.elementAt(j).getBookID());
 
         }
 
     }
     for(var i=0;i<res.size();i++){
-    $("#myTable").append("<tr><td>"+(res.elementAt(i).getBookID())+"</td><td>"+(res.elementAt(i).getBookName())+"</td><td>"+(res.elementAt(i).getBookEdit())+"</td><td>"+(res.elementAt(i).getBOOK_PUB())+"</td><td>"+(res.elementAt(i).getCategory())+"</td><td>"+(res.elementAt(i).getState())+"</td><td><button id='borrow' class='myBtn'>借书</button></td></tr>")}
+    $("#myTable").append("<tr><td>"+(res.elementAt(i).getBookID())+"</td><td>"+(res.elementAt(i).getBookName())+"</td><td>"+(res.elementAt(i).getBookEdit())+"</td><td>"+(res.elementAt(i).getBOOK_PUB())+"</td><td>"+(res.elementAt(i).getCategory())+"</td><td>"+(res.elementAt(i).getState())+"</td><td>"+res.elementAt(i).getTime()+"</td><td>"+"<button id='borrow' class='myBtn'>借书</button></td></tr>")}
     $(document).on("click",'#borrow',function () {
         var state =$(this).parents("tr").find("td").eq(5).text();
         var ID =$(this).parents("tr").find("td").eq(0).text();
-        if($("#book1").html()!==""&&$("#book2").html()!==""&&$("#book3").html()!==""){
+        if($("#book1").val()!==""&&$("#book2").val()!==""&&$("#book3").val()!==""){
             syalert.syopen("alert1");
         } else if(state=="未借"){
             syalert.syopen("alert2");
             $(this).parents("tr").find("td").eq(5).html("已借");
             var newstate=$(this).parents("tr").find("td").eq(5).text();
           bookinfo.update(ID,state,"213171645");
-            if($("#book1").html()==""){
-                $("#book1").html(ID);
-            }else if($("#book2").html()==""){
-                $("#book2").html(ID);
-            }else if($("#book3").html()==""){
-                $("#book3").html(ID);
+            if($("#book1").val()==""){
+                $("#book1").val(ID);
+            }else if($("#book2").val()==""){
+                $("#book2").val(ID);
+            }else if($("#book3").val()==""){
+                $("#book3").val(ID);
             }
 
         } else{
@@ -178,7 +186,7 @@
     })
 
     $("#btn1").click(function () {
-        var id =$("#book1").html();
+        var id =$("#book1").val();
         var table,tr,td,i,state;
         table = document.getElementById("myTable");
         tr = table.getElementsByTagName("tr");
@@ -191,7 +199,7 @@
             state=tr[i].getElementsByTagName("td")[5].innerHTML.toUpperCase();
         if(id==td){
                 tr[i].getElementsByTagName("td")[5].innerHTML="未借";
-                $("#book1").html("");
+                $("#book1").val("");
                 bookinfo.update(id,state,"213171645");
         syalert.syopen("alert3");
             }
@@ -199,7 +207,7 @@
         }
     });
     $("#btn2").click(function () {
-        var id =$("#book2").html();
+        var id =$("#book2").val();
         var table,tr,td,i,state;
         table = document.getElementById("myTable");
         tr = table.getElementsByTagName("tr");
@@ -213,7 +221,7 @@
             state=tr[i].getElementsByTagName("td")[5].innerHTML.toUpperCase();
             if(id==td){
                 tr[i].getElementsByTagName("td")[5].innerHTML="未借";
-                $("#book2").html("");
+                $("#book2").val("");
                 bookinfo.update(id,state,"213171645");
                 syalert.syopen("alert3");
             }
@@ -221,7 +229,7 @@
         }
     });
     $("#btn3").click(function () {
-        var id =$("#book3").html();
+        var id =$("#book3").val();
         var table,tr,td,i,state;
         table = document.getElementById("myTable");
         tr = table.getElementsByTagName("tr");
@@ -234,13 +242,16 @@
             state=tr[i].getElementsByTagName("td")[5].innerHTML.toUpperCase();
             if(id==td){
                 tr[i].getElementsByTagName("td")[5].innerHTML="未借";
-                $("#book3").html("");
+                $("#book3").val("");
                 bookinfo.update(id,state,"213171645");
                 syalert.syopen("alert3");
             }
 
         }
     });
+    $("#bookstore").click(function () {
+        syalert.syopen("bookalert");
+    })
 
     function myFunction() {
         // 声明变量
@@ -262,40 +273,9 @@
             }
         }
     }
-    $(function() {
-        var Accordion = function(el, multiple) {
-            this.el = el || {};
-            // more then one submenu open?
-            this.multiple = multiple || false;
 
-            var dropdownlink = this.el.find('.dropdownlink');
-            dropdownlink.on('click',
-                { el: this.el, multiple: this.multiple },
-                this.dropdown);
-        };
-
-        Accordion.prototype.dropdown = function(e) {
-            var $el = e.data.el,
-                $this = $(this),
-                //this is the ul.submenuItems
-                $next = $this.next();
-
-            $next.slideToggle();
-            $this.parent().toggleClass('open');
-
-            if(!e.data.multiple) {
-                //show only one menu at the same time
-                $el.find('.submenuItems').not($next).slideUp().parent().removeClass('open');
-            }
-        }
-
-        var accordion = new Accordion($('.accordion-menu'), false);
-    })
 </script>
 <style>
-    ul {
-        list-style: none;
-    }
 
     a {
         text-decoration: none;
@@ -396,60 +376,7 @@
         -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.045);
         box-shadow: 0 2px 0 rgba(0,0,0,0.045);
     }
-    .accordion-menu {
-        width: 100%;
-        max-width: 350px;
-        margin: 60px auto 20px;
-        background: #fff;
-        border-radius: 4px;
-    }
-    .accordion-menu li.open .dropdownlink {
-        color: #CDDC39;
-    .fa-chevron-down {
-        transform: rotate(180deg);
-    }
-    }
-    .accordion-menu li:last-child .dropdownlink {
-        border-bottom: 0;
-    }
-    .dropdownlink {
-        cursor: pointer;
-        display: block;
-        padding: 15px 15px 15px 45px;
-        font-size: 18px;
-        border-bottom: 1px solid #ccc;
-        color: #212121;
-        position: relative;
-        transition: all 0.4s ease-out;
-    i {
-        position: absolute;
-        top: 17px;
-        left: 16px;
-    }
-    .fa-chevron-down {
-        right: 12px;
-        left: auto;
-    }
-    }
 
-    .submenuItems {
-        display: none;
-        background: #C8E6C9;
-    li {
-        border-bottom: 1px solid #B6B6B6;
-    }
-    }
-
-    .submenuItems a {
-        display: block;
-        color: #727272;
-        padding: 12px 12px 12px 45px;
-        transition: all 0.4s ease-out;
-    &:hover {
-         background-color: #CDDC39;
-         color: #fff;
-     }
-    }
 
 </style>
 
