--- a/html/shop.html
+++ b/html/shop.html
@@ -4,6 +4,9 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="/jquery/jquery-1.11.1.min.js"></script>
 <link rel="stylesheet" href="syalert/syalert.min.css" />
+<script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
 <script src="syalert/syalert.min.js"></script>
 <html lang="en">
 <head>
@@ -12,24 +15,32 @@
 
 </head>
 <body background="image/606.jpg">
-<h1 style="font-family: Lobster">SHOP</h1>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <a href="">商店</a>
+</nav>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="搜索...">
-<table id="myTable" >
+<div style="width: 100%;height: 50%;overflow: scroll;">
+<table id="myTable" class="table table-bordered">
     <tr>
-        <th style="width:16.5%;">超市</th>
-        <th style="width: 16.5%">商品名称</th>
-        <th style="width: 16.5%"> 价格</th>
-        <th style="width: 16.5%"> 数量</th>
-        <th style="width: 16.5%">购买数量</th>
-        <th style="width: 16.5%">操作</th>
+        <th >超市</th>
+        <th >商品名称</th>
+        <th > 价格</th>
+        <th> 数量</th>
+        <th >购买数量</th>
+        <th>详细信息</th>
+        <th >操作</th>
 
     </tr>
 
 </table>
-<div><button id="basket" class="buy">查看购物车</button></div>
+</div>
+<div><button id="basket" class="buy">查看购物车</button>
+    <button class="buy"><a href="javascript:location.reload();">刷新</a></button>
+</div>
 <div class="sy-alert sy-alert-model animated" sy-enter="zoomIn" sy-leave="zoomOut" sy-type="confirm" sy-mask="true" id="alert4">
     <div class="sy-title">购物车</div>
     <div class="sy-content">
+
         <table id="myForm">
             <tr>
                 <th style="width: 20%">超市</th>
@@ -38,15 +49,20 @@
                 <th style="width: 20%">数量</th>
                 <th style="width: 20%">操作</th>
             </tr>
+<tbody id="basketbody">
 
-
+</tbody>
             
         </table>
     </div>
     <div class="sy-btn">
         <button onClick="syalert.syhide('alert4')">取消</button>
+        <button id="cancel">清空</button>
         <button  id="Buy">购买</button>
     </div>
+</div>
+<div class="sy-alert sy-alert-tips animated" sy-enter="zoomIn" sy-leave="zoomOut" sy-type="tips" sy-mask="false" id="shopalert3">
+    <div class="sy-content">不能为空</div>
 </div>
 <div class="sy-alert sy-alert-tips animated" sy-enter="zoomIn" sy-leave="zoomOut" sy-type="tips" sy-mask="false" id="alert3">
     <div class="sy-content">不能为负数</div>
@@ -60,12 +76,18 @@
 <div class="sy-alert sy-alert-tips animated" sy-enter="zoomIn" sy-leave="zoomOut" sy-type="tips" sy-mask="false" id="alert0">
     <div class="sy-content">数量为空！</div>
 </div>
+<img style="display: none;text-align: center"  id="picture"/>
     <script>
-
+        function initImg(){
+            var allImg = document.getElementsByTagName("img");
+            for(var i=0; i<allImg.length; i++){
+                allImg[i].style.display = "none";
+            }
+        }
        var s =0;
       var res = goodinfo.getAll();
     for(var i=0;i<res.size();i++){
-    $("#myTable").append("<tr><td>"+(goodinfo.getAll().elementAt(i).getTag())+"</td><td>"+(goodinfo.getAll().elementAt(i).getName())+"</td><td>"+(goodinfo.getAll().elementAt(i).getPrice())+"</td><td id='td3'>"+(goodinfo.getAll().elementAt(i).getNumber())+"</td><td>"+"<input id='numberInput' placeholder='请输入购买数量'oninput = \"value=value.replace(/[^\\d]/g,'')\" />"+"</td><td>"+"<button id='buy'class='buy'>加入购物车</button>"+"</td></tr>")}
+    $("#myTable").append("<tr><td>"+(goodinfo.getAll().elementAt(i).getTag())+"</td><td>"+(goodinfo.getAll().elementAt(i).getName())+"</td><td>"+(goodinfo.getAll().elementAt(i).getPrice())+"</td><td id='td3'>"+(goodinfo.getAll().elementAt(i).getNumber())+"</td><td>"+"<input id='numberInput' placeholder='请输入购买数量'oninput = \"value=value.replace(/[^\\d]/g,'')\" />"+"</td><td><button id='msg' class='buy'>详细信息</button>"+"</td><td style='display: none'>"+res.elementAt(i).getPicturePath()+"</td><td>"+"<button id='buy'class='buy'>加入购物车</button>"+"</td></tr>")}
 
 
    $(document).on("click",'#buy',function () {
@@ -77,7 +99,9 @@
        var price =$(this).parents("tr").find("td").eq(2).text();
 
        var newcount = count -number;
-       if(number < 0){
+       if(number==""){
+           syalert.syopen("shopalert3");
+       } else if(number < 0){
            syalert.syopen("alert3");
        }else if(newcount < 0){
            syalert.syopen("alert3");
@@ -86,9 +110,17 @@
            syalert.syopen("alert2");
        $(this).parents("tr").find("td").eq(3).html(newcount);
 
-           $("#myForm").append("<tr><td>"+tag+"</td><td>"+name+"</td><td>"+price+"</td><td>"+number+"</td><td>"+"<button id='delete' class='buy'>删除</button>"+"</td></tr>");
+           $("#basketbody").append("<tr><td>"+tag+"</td><td>"+name+"</td><td>"+price+"</td><td>"+number+"</td><td>"+"<button id='delete' class='buy'>删除</button>"+"</td></tr>");
        }
       });
+    $(document).on("click",'#msg',function () {
+        var src=$(this).parents("tr").find("td").eq(6).text();
+        document.getElementById("picture").src=src;
+
+       document.getElementById("picture").style.display="block";
+        setTimeout("initImg()",5*1000);
+
+    })
 $(document).on("click",'#delete',function () {
     $(this).parents("tr").remove();
 })
@@ -118,10 +150,10 @@ $("#basket").click(function () {
 })
 $(document).on("click",'#Buy',function () {
     var price,number,name,tag,i;
-    var table = document.getElementById("myForm");
+    var table = document.getElementById("basketbody");
     var tr=table.getElementsByTagName("tr");
 
-    for(i =1;i<tr.length;i++){
+    for(i =0;i<tr.length;i++){
         price=tr[i].getElementsByTagName("td")[2].innerHTML.toUpperCase();
         number=tr[i].getElementsByTagName("td")[3].innerHTML.toUpperCase();
         name =tr[i].getElementsByTagName("td")[1].innerHTML.toUpperCase();
@@ -134,15 +166,25 @@ $(document).on("click",'#Buy',function () {
         goodinfo.consumption("213170001",price*number);
 
     }
+    $("#basketbody").remove();
+
+
+
     syalert.syhide("alert4");
     syalert.syopen("alert1");
 })
 
-
+       $("#cancel").click(function () {
+           $("#basketbody").remove();
+       })
 
 
 </script>
 <style>
+    .navbar a {
+        color: white;
+        line-height: 3em;
+    }
     #myInput {
         background-image: url('https://static.runoob.com/images/mix/searchicon.png'); /* 搜索按钮 */
         background-position: 10px 12px; /* 定位搜索按钮 */
@@ -166,10 +208,7 @@ $(document).on("click",'#Buy',function () {
        border: 1px solid #ddd;
 
    }
-  td{
-      text-align: center;
 
-  }
     h1{
 
         background-color: darkcyan;
