--- a/html/shopAdmi.html
+++ b/html/shopAdmi.html
@@ -5,27 +5,35 @@
 <script src="/jquery/jquery-1.11.1.min.js"></script>
 <link rel="stylesheet" href="syalert/syalert.min.css" />
 <script src="syalert/syalert.min.js"></script>
+<script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>商店系统</title>
 
 </head>
-<body background="image/606.jpg">
-<h1 style="font-family: Lobster">SHOP</h1>
+<body background="image/606.jpg" >
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <a href="">商店</a>
+</nav>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="搜索...">
-<table id="myTable" >
+<div style="width: 100%;height: 50%;overflow: scroll;">
+<table id="myTable" class="table table-bordered" >
     <tr>
         <th style="width:16.5%;">超市</th>
         <th style="width: 16.5%">商品名称</th>
         <th style="width: 16.5%"> 价格</th>
         <th style="width: 16.5%"> 数量</th>
         <th style="width: 16.5%">购买数量</th>
+        <th>详细信息</th>
         <th style="width: 16.5%">操作</th>
 
     </tr>
 
 </table>
+</div>
+</div>
 <div><button id="basket" class="buy">查看购物车</button>
     <button id="add" class="buy">添加商品</button>
     <button id ="delete" class="buy">删除商品</button>
@@ -42,13 +50,16 @@
                 <th style="width: 20%">数量</th>
                 <th style="width: 20%">操作</th>
             </tr>
+            <tbody id="basketbody">
 
+            </tbody>
 
             
         </table>
     </div>
     <div class="sy-btn">
         <button onClick="syalert.syhide('alert4')">取消</button>
+        <button id="cancel">清空</button>
         <button  id="Buy">购买</button>
     </div>
 </div>
@@ -71,7 +82,7 @@
     </div>
 </div>
 <div class="sy-alert sy-alert-model animated" sy-enter="zoomIn" sy-leave="zoomOut" sy-type="confirm" sy-mask="true" id="alert7">
-    <div class="sy-title">用户注册</div>
+    <div class="sy-title">添加商品</div>
     <div class="sy-content">
         <div class="form">
             <p class="input-item"><input type="text" id="addID" placeholder="请输入ID号" /></p>
@@ -108,12 +119,23 @@
 <div class="sy-alert sy-alert-tips animated" sy-enter="zoomIn" sy-leave="zoomOut" sy-type="tips" sy-mask="false" id="alert8">
     <div class="sy-content">添加成功！</div>
 </div>
+
+<img style="display: none;text-align: center" id="picture"/>
+
     <script>
+
+
+        function initImg(){
+            var allImg = document.getElementsByTagName("img");
+            for(var i=0; i<allImg.length; i++){
+                allImg[i].style.display = "none";
+            }
+        }
 
        var s =0;
       var res = goodinfo.getAll();
     for(var i=0;i<res.size();i++){
-    $("#myTable").append("<tr><td>"+(goodinfo.getAll().elementAt(i).getTag())+"</td><td>"+(goodinfo.getAll().elementAt(i).getName())+"</td><td>"+(goodinfo.getAll().elementAt(i).getPrice())+"</td><td id='td3'>"+(goodinfo.getAll().elementAt(i).getNumber())+"</td><td>"+"<input id='numberInput' placeholder='请输入购买数量'oninput = \"value=value.replace(/[^\\d]/g,'')\" />"+"</td><td>"+"<button id='buy'class='buy'>加入购物车</button>"+"</td></tr>")}
+    $("#myTable").append("<tr><td>"+(goodinfo.getAll().elementAt(i).getTag())+"</td><td>"+(goodinfo.getAll().elementAt(i).getName())+"</td><td>"+(goodinfo.getAll().elementAt(i).getPrice())+"</td><td id='td3'>"+(goodinfo.getAll().elementAt(i).getNumber())+"</td><td>"+"<input id='numberInput' placeholder='请输入购买数量'oninput = \"value=value.replace(/[^\\d]/g,'')\" />"+"</td><td><button id='msg' class='buy'>详细信息</button>"+"</td><td style='display: none'>"+res.elementAt(i).getPicturePath()+"</td><td>"+"<button id='buy'class='buy'>加入购物车</button>"+"</td></tr>")}
 
 
    $(document).on("click",'#buy',function () {
@@ -134,7 +156,7 @@
            syalert.syopen("alert2");
        $(this).parents("tr").find("td").eq(3).html(newcount);
 
-           $("#myForm").append("<tr><td>"+tag+"</td><td>"+name+"</td><td>"+price+"</td><td>"+number+"</td><td>"+"<button id='delete' class='buy'>删除</button>"+"</td></tr>");
+           $("#basketbody").append("<tr><td>"+tag+"</td><td>"+name+"</td><td>"+price+"</td><td>"+number+"</td><td>"+"<button id='delete' class='buy'>删除</button>"+"</td></tr>");
        }
       });
 $(document).on("click",'#delete',function () {
@@ -160,7 +182,14 @@ $(document).on("click",'#delete',function () {
             }
         }
     }
+       $(document).on("click",'#msg',function () {
+           var src=$(this).parents("tr").find("td").eq(6).text();
+           document.getElementById("picture").src=src;
 
+           document.getElementById("picture").style.display="block";
+           setTimeout("initImg()",5*1000);
+
+       })
 $("#basket").click(function () {
     syalert.syopen("alert4")
 })
@@ -196,10 +225,10 @@ $("#basket").click(function () {
        })
 $(document).on("click",'#Buy',function () {
     var price,number,name,tag,i;
-    var table = document.getElementById("myForm");
+    var table = document.getElementById("basketbody");
     var tr=table.getElementsByTagName("tr");
 
-    for(i =1;i<tr.length;i++){
+    for(i =0;i<tr.length;i++){
         price=tr[i].getElementsByTagName("td")[2].innerHTML.toUpperCase();
         number=tr[i].getElementsByTagName("td")[3].innerHTML.toUpperCase();
         name =tr[i].getElementsByTagName("td")[1].innerHTML.toUpperCase();
@@ -212,15 +241,22 @@ $(document).on("click",'#Buy',function () {
         goodinfo.consumption("213170001",price*number);
 
     }
+    $("#basketbody").remove();
     syalert.syhide("alert4");
     syalert.syopen("alert1");
 })
-
+$("#cancel").click(function () {
+    $("#basketbody").remove();
+})
 
 
 
 </script>
 <style>
+    .navbar a {
+        color: white;
+        line-height: 3em;
+    }
     #myInput {
         background-image: url('https://static.runoob.com/images/mix/searchicon.png'); /* 搜索按钮 */
         background-position: 10px 12px; /* 定位搜索按钮 */
@@ -244,10 +280,7 @@ $(document).on("click",'#Buy',function () {
        border: 1px solid #ddd;
 
    }
-  td{
-      text-align: center;
 
-  }
     h1{
 
         background-color: darkcyan;
@@ -308,6 +341,19 @@ $(document).on("click",'#Buy',function () {
         -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
         box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)
     }
+    .box {
+        position: relative;
+        display: inline-block;
+    }
+    .box .clear {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 16px;
+        height: 16px;
+        border: 1px solid #999;
+    }
 </style>
 </body>
+
 </html>
